--- a/src/components/PersonCard/PersonCard.module.scss
+++ b/src/components/PersonCard/PersonCard.module.scss
@@ -2,15 +2,15 @@
   border-radius: 10px;
   overflow: hidden;
   height: 240px;
-  // width: 180px;
   position: relative;
   transition: 320ms linear;
   transform-origin: top;
 
   img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+    min-height: 100%;
+    min-width: 100%;
+    object-fit: contain;
+    object-position: center;
   }
 
   &:hover {
