--- a/src/components/SideBar/SiderBar.module.scss
+++ b/src/components/SideBar/SiderBar.module.scss
@@ -9,7 +9,7 @@
   @media (max-width: 768px) {
     position: fixed;
     background-color: #fff;
-    z-index: 50;
+    z-index: 500;
     top: 0;
     bottom: 0;
 
